# exageostat-dev-nonstationary

./: .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  summer_values.csv
chameleon/: .gitignore  .gitlab-ci-env.sh  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.org  CTestConfig.cmake  ChangeLog  LICENCE.txt  README.org  READMEDEV.org
chameleon/.gitlab/: bench_plafrim.yml  build.yml  common.yml  coverage.yml  coverity.yml  pages.yml  release.yml  sonarqube.yml  test_openmp.yml  test_parsec.yml  test_quark.yml  test_starpu.yml  test_starpu_simgrid.yml
chameleon/cmake_modules/: CHAMELEONConfig.cmake.in  GenPkgConfig.cmake  PrintOpts.cmake  gitlab-ci-initial-cache.cmake  local_subs.py
chameleon/cmake_modules/morse_cmake/: .gitlab-ci.yml
chameleon/compute/: CMakeLists.txt  map.c  pmap.c  pzbuild.c  pzgebrd_ge2gb.c  pzgelqf.c  pzgelqf_param.c  pzgelqfrh.c  pzgemm.c  pzgenm2.c  pzgepdf_qdwh.c  pzgepdf_qr.c  pzgeqrf.c  pzgeqrf_param.c  pzgeqrfrh.c  pzgetrf_incpiv.c  pzgetrf_nopiv.c  pzgram.c  pzhemm.c  pzher2k.c  pzherk.c  pzhetrd_he2hb.c  pzlacpy.c  pzlag2c.c  pzlange.c  pzlansy.c  pzlascal.c  pzlaset.c  pzlaset2.c  pzlatms.c  pzlauum.c  pzplghe.c  pzplgsy.c  pzplrnk.c  pzplrnt.c  pzpotrf.c  pzpotrimm.c  pzsymm.c  pzsyr2k.c  pzsyrk.c  (+92 more)
chameleon/control/: CMakeLists.txt  async.c  async.h  auxiliary.c  auxiliary.h  chameleon_f77.c  chameleon_f77.h  chameleon_f90.f90  chameleon_mf77.c  chameleon_zcf90.F90  chameleon_zf77.c  chameleon_zf90.F90  chameleon_zf90_wrappers.F90  common.h  compute_z.h  context.c  context.h  control.c  descriptor.c  descriptor.h  gkkleader.h  global.h  primes.h  tile.c  workspace.c  workspace.h  workspace_z.c
chameleon/coreblas/compute/: CMakeLists.txt  core_dlag2z.c  core_dzasum.c  core_zaxpy.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgemv.c  core_zgeqrt.c  core_zgesplit.c  core_zgessm.c  core_zgessq.c  core_zgetf2_nopiv.c  core_zgetrf.c  core_zgetrf_incpiv.c  core_zgetrf_nopiv.c  core_zgram.c  core_zhe2ge.c  core_zhemm.c  core_zher2k.c  core_zherfb.c  core_zherk.c  core_zhessq.c  core_zlacpy.c  core_zlag2c.c  core_zlange.c  core_zlanhe.c  core_zlansy.c  core_zlantr.c  core_zlascal.c  core_zlaset.c  core_zlaset2.c  core_zlatm1.c  core_zlatro.c  core_zlauum.c  core_zpamm.c  core_zparfb.c  core_zpemv.c  core_zplghe.c  core_zplgsy.c  (+34 more)
chameleon/coreblas/eztrace_module/: CMakeLists.txt  coreblas_core_eztrace_module  coreblas_tcore_eztrace_module
chameleon/coreblas/include/: CMakeLists.txt  coreblas.h
chameleon/cudablas/: CMakeLists.txt
chameleon/cudablas/compute/: CMakeLists.txt  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlarfb.c  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztpmlqt.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  cuda_ztsmqr.c  cuda_ztsqrt.c  cuda_ztstrf.c  cuda_zttmlq.c  cuda_zttmqr.c  cuda_zunmlqt.c  cuda_zunmqrt.c  cudaglobal.c
chameleon/cudablas/eztrace_module/: CMakeLists.txt  cudablas_eztrace_module
chameleon/cudablas/include/: CMakeLists.txt  cudablas.h
chameleon/doc/: CMakeLists.txt
chameleon/doc/doxygen/: CMakeLists.txt  conf.dox.in  main.dox
chameleon/doc/orgmode/: CMakeLists.txt  users_guide.org.in  version.org.in
chameleon/example/: CMakeLists.txt
chameleon/example/lapack_to_chameleon/: CMakeLists.txt  CTestLists.cmake  lapack_to_chameleon.h  step0.c  step0.h  step1.c  step1.h  step2.c  step2.h  step3.c  step3.h  step4.c  step4.h  step5.c  step5.h  step6.c  step6.h  step7.c  step7.h
chameleon/example/link_chameleon/: CMakeLists.txt  README.org  link_chameleon.c  link_chameleon.f90
chameleon/hqr/: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.org  CTestConfig.cmake  FindHQR.cmake  README.org  READMEDEV.org  analysis.sh  hqr_env.sh.in
chameleon/hqr/cmake_modules/: GenHQRPkgConfig.cmake
chameleon/hqr/include/: libhqr.h  libhqr_internal.h  libhqr_list.h  libhqr_queue.h
chameleon/hqr/src/: CMakeLists.txt  HQRConfig.cmake.in  check.c  gendot.c  gensvg.c  high_binary.c  high_fibonacci.c  high_flat.c  high_greedy.c  hqr.c  low_adaptiv.c  low_binary.c  low_fibonacci.c  low_flat.c  low_greedy.c  low_greedy1p.c  mtxtree.c  print.c  queue.c  svd.c  systolic.c  tphqr.c  tshqr.c
chameleon/hqr/testings/: CMakeLists.txt  common.c  common.h  draw_hqr.c  draw_systolic.c  draw_tphqr.c  testing_hqr.c  testing_print.c  testing_svd.c  testing_systolic.c  testing_tphqr.c
chameleon/include/: CMakeLists.txt  chameleon.h
chameleon/include/chameleon/: chameleon_z.h  chameleon_zc.h  config.h.in  constants.h  flops.h  fortran.h  runtime.h  runtime_struct.h  simulate.h  struct.h  tasks.h  tasks_z.h  tasks_zc.h  timer.h  types.h
chameleon/lib/pkgconfig/: chameleon.pc.in
chameleon/runtime/: CMakeLists.txt
chameleon/runtime/openmp/: CMakeLists.txt
chameleon/runtime/parsec/: CMakeLists.txt
chameleon/runtime/quark/: CMakeLists.txt
chameleon/runtime/starpu/: CMakeLists.txt
chameleon/simucore/: CMakeLists.txt
chameleon/testing/: CMakeLists.txt  CTestLists.cmake  chameleon_ztesting.c  parameters.c  run_list.c  testing_zcheck.c  testing_zcheck.h  testing_zgeadd.c  testing_zgelqf.c  testing_zgelqf_hqr.c  testing_zgelqs.c  testing_zgels.c  testing_zgels_hqr.c  testing_zgemm.c  testing_zgenm2.c  testing_zgepdf_qdwh.c  testing_zgepdf_qr.c  testing_zgeqrf.c  testing_zgeqrf_hqr.c  testing_zgeqrs.c  testing_zgesv.c  testing_zgetrf.c  testing_zgetrs.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zlacpy.c  testing_zlange.c  testing_zlanhe.c  testing_zlansy.c  testing_zlantr.c  testing_zlascal.c  testing_zlauum.c  testing_zplrnk.c  testing_zposv.c  testing_zpotrf.c  testing_zpotri.c  testing_zpotrs.c  testing_zsymm.c  testing_zsyr2k.c  (+17 more)
chameleon/testing/input/: geadd.in  gelqf.in  gelqf_hqr.in  gelqs.in  gels.in  gels_hqr.in  gemm.in  (+50 more)
chameleon/tools/: analysis.sh  build_macosx.sh  check_header.sh  find_sources.sh  fix_doxygen_date.sh  pages.sh  release.sh
(+3693 files in other folders)
